src/test/ui/feature-gate-inline_const.stderr
error: expected expression, found keyword `const`
  --> $DIR/feature-gate-inline_const.rs:2:13
   |
LL |     let _ = const {
   |             ^^^^^ expected expression

error: aborting due to previous error

